@@ -1,3 +1,9 @@
+2001-09-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/GNUmakefile: install DistributedObjects.h in gnustep/base
+	rather than Foundation .... but it's an internal header - should
+	it be installed at all?
+
 2001-09-25  Adam Fedor  <fedor@gnu.org>
 
 	* configure.in: Typo in saving CPPFLAGS during iconv test.
